// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select matches snapshot for errorText: errorText mount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  border-left: 4px solid #d4351c;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 0;
}

.c0:after {
  content: '';
  display: table;
  clear: both;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  display: block;
  margin-bottom: 15px;
  clear: both;
  color: #d4351c;
}

.c2 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  display: block;
  margin-bottom: 15px;
  color: #6f777b;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #d4351c;
}

.c4:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 0;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media print {
  .c3 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c2 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c4 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    width: 50%;
    height: 38px;
  }
}

<Select
  errorText="example"
  hint="example"
  input={Object {}}
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <Label
    error="example"
    errorText="example"
  >
    <src__StyledLabel
      error="example"
      errorText="example"
    >
      <StyledComponent
        error="example"
        errorText="example"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "src__StyledLabel-sc-14n2scx-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "display: flex; flex-direction: column; box-sizing: border-box; :after {
  content: ''; display: table; clear: both;
}",
                [Function],
                [Function],
              ],
            },
            "displayName": "src__StyledLabel",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "src__StyledLabel-sc-14n2scx-0",
            "target": "label",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <label
          className="c0"
        >
          <LabelText>
            <src__StyledLabelText>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "src__StyledLabelText-sc-12l0n4z-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "font-family: \\"nta\\", Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; @media print {
  font-size: 14px; line-height: 1.15;
} font-weight: 400; font-size: 16px; line-height: 1.25; @media only screen and (min-width: 641px) {
  font-size: 19px; line-height: 1.3157894736842106;
}",
                        "color: #0b0c0c; @media print {
  color: #000;
}",
                        "display: block; clear: none; padding-bottom: 2px;",
                        [Function],
                        [Function],
                      ],
                    },
                    "displayName": "src__StyledLabelText",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "src__StyledLabelText-sc-12l0n4z-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  example
                </span>
              </StyledComponent>
            </src__StyledLabelText>
          </LabelText>
          <HintText>
            <src__StyledHint>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "src__StyledHint-sc-1qn4br2-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        "font-family: \\"nta\\", Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; @media print {
  font-size: 14px; line-height: 1.15;
} font-weight: 400; font-size: 16px; line-height: 1.25; @media only screen and (min-width: 641px) {
  font-size: 19px; line-height: 1.3157894736842106;
}",
                        "display: block; margin-bottom: 15px; color: #6f777b;",
                        [Function],
                      ],
                    },
                    "displayName": "src__StyledHint",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "src__StyledHint-sc-1qn4br2-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c2"
                >
                  example
                </span>
              </StyledComponent>
            </src__StyledHint>
          </HintText>
          <ErrorText>
            <src__StyledError>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "src__StyledError-q8g4f0-0",
                      "isStatic": false,
                      "lastClassName": "c3",
                      "rules": Array [
                        "font-family: \\"nta\\", Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; @media print {
  font-size: 14px; line-height: 1.15;
} font-weight: 700; font-size: 16px; line-height: 1.25; @media only screen and (min-width: 641px) {
  font-size: 19px; line-height: 1.3157894736842106;
}",
                        "display: block; margin-bottom: 15px; clear: both; color: #d4351c;",
                        [Function],
                      ],
                    },
                    "displayName": "src__StyledError",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "src__StyledError-q8g4f0-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c3"
                >
                  example
                </span>
              </StyledComponent>
            </src__StyledError>
          </ErrorText>
          <src__StyledSelect
            error="example"
          >
            <StyledComponent
              error="example"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "src__StyledSelect-vnwid3-0",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      "font-family: \\"nta\\", Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; @media print {
  font-size: 14px; line-height: 1.15;
} font-weight: 400; font-size: 16px; line-height: 1.25; @media only screen and (min-width: 641px) {
  font-size: 19px; line-height: 1.3157894736842106;
}",
                      "box-sizing: border-box; width: 100%; height: 33px; padding: 5px 4px 4px; border: 2px solid #0b0c0c; @media only screen and (min-width: 641px) {
  width: 50%; height: 38px;
} :focus {
  outline: 3px solid #ffdd00; outline-offset: 0;
}",
                      [Function],
                    ],
                  },
                  "displayName": "src__StyledSelect",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "src__StyledSelect-vnwid3-0",
                  "target": "select",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <select
                className="c4"
              >
                example
              </select>
            </StyledComponent>
          </src__StyledSelect>
        </label>
      </StyledComponent>
    </src__StyledLabel>
  </Label>
</Select>
`;

exports[`Select matches snapshot: enzyme.mount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.c0:after {
  content: '';
  display: table;
  clear: both;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c2 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

.c2:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 0;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media print {
  .c2 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    width: 50%;
    height: 38px;
  }
}

<Select
  input={Object {}}
  label="example"
  meta={Object {}}
>
  <Label
    error={false}
  >
    <src__StyledLabel
      error={false}
    >
      <StyledComponent
        error={false}
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "src__StyledLabel-sc-14n2scx-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "display: flex; flex-direction: column; box-sizing: border-box; :after {
  content: ''; display: table; clear: both;
}",
                [Function],
                [Function],
              ],
            },
            "displayName": "src__StyledLabel",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "src__StyledLabel-sc-14n2scx-0",
            "target": "label",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <label
          className="c0"
        >
          <LabelText>
            <src__StyledLabelText>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "src__StyledLabelText-sc-12l0n4z-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "font-family: \\"nta\\", Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; @media print {
  font-size: 14px; line-height: 1.15;
} font-weight: 400; font-size: 16px; line-height: 1.25; @media only screen and (min-width: 641px) {
  font-size: 19px; line-height: 1.3157894736842106;
}",
                        "color: #0b0c0c; @media print {
  color: #000;
}",
                        "display: block; clear: none; padding-bottom: 2px;",
                        [Function],
                        [Function],
                      ],
                    },
                    "displayName": "src__StyledLabelText",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "src__StyledLabelText-sc-12l0n4z-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  example
                </span>
              </StyledComponent>
            </src__StyledLabelText>
          </LabelText>
          <src__StyledSelect>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "src__StyledSelect-vnwid3-0",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "font-family: \\"nta\\", Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; @media print {
  font-size: 14px; line-height: 1.15;
} font-weight: 400; font-size: 16px; line-height: 1.25; @media only screen and (min-width: 641px) {
  font-size: 19px; line-height: 1.3157894736842106;
}",
                      "box-sizing: border-box; width: 100%; height: 33px; padding: 5px 4px 4px; border: 2px solid #0b0c0c; @media only screen and (min-width: 641px) {
  width: 50%; height: 38px;
} :focus {
  outline: 3px solid #ffdd00; outline-offset: 0;
}",
                      [Function],
                    ],
                  },
                  "displayName": "src__StyledSelect",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "src__StyledSelect-vnwid3-0",
                  "target": "select",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <select
                className="c2"
              >
                example
              </select>
            </StyledComponent>
          </src__StyledSelect>
        </label>
      </StyledComponent>
    </src__StyledLabel>
  </Label>
</Select>
`;
